--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <center>
-        <marquee direction= "up"><h1>Vaatekauppa</h1></marquee>
+        <marquee direction= "right"><h1>Vaatekauppa</h1></marquee>
+
+        <input id="pin" type="password" placeholder="syötä pinkoodi" />
+        <button id="login" onclick="login()">Login</button>
+
+        <button id="logout" style="visibility: hidden;" onclick="logout()">Logout</button>
+
+        <br><br>
+        <button id="tuotenappi" disabled onclick="getVaatteet()">Tuotteet</button>
+
+        <div  id="root"></div>
    
         <div id="footer"></div>
    
